derive_everything/tests/fail/nonsense.rs
use derive_everything::derive_everything;

#[derive_everything]
fn noop() {}

#[derive_everything]
trait Trait {}

fn main() {}
